--- a/Proyecto_Municipalidad_SanIsidro/GAC/GAC.csproj
+++ b/Proyecto_Municipalidad_SanIsidro/GAC/GAC.csproj
@@ -167,12 +167,15 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AtenderController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProyectoInversionController.cs" />
     <Compile Include="Controllers\ReclamoController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\ProyectoInversion\CreateProyectoInversionModel.cs" />
+    <Compile Include="Models\ProyectoInversion\UpdateProyectoInversionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -376,12 +379,17 @@
     <Content Include="Images\imgtemplate\user7-128x128.jpg" />
     <Content Include="Images\imgtemplate\user8-128x128.jpg" />
     <Content Include="Images\logo-san-isidro.png" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
+    <Content Include="Scripts\jquery-1.9.1.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
+    <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="Scripts\jquery-1.9.1.js" />
+    <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
@@ -415,6 +423,9 @@
     <Content Include="Scripts\ParticipacionVecinal\RegistrarIniciativa.js" />
     <Content Include="Scripts\ParticipacionVecinal\Requerimiento.js" />
     <Content Include="Views\Atender\AtenderReclamo.aspx" />
+    <Content Include="Views\ProyectoInversion\Detail.aspx" />
+    <Content Include="Views\ProyectoInversion\Index.aspx" />
+    <Content Include="Views\ProyectoInversion\Update.aspx" />
     <Content Include="Views\Reclamo\_HistorialReclamos.ascx" />
     <Content Include="Views\Reclamo\HistorialReclamo.aspx" />
     <Content Include="Views\Reclamo\Login.aspx" />
