--- a/Proyecto_Municipalidad_SanIsidro/GAC/Web.config
+++ b/Proyecto_Municipalidad_SanIsidro/GAC/Web.config
@@ -10,7 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-GAC-20150601210424;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-GAC-20150601210424.mdf" providerName="System.Data.SqlClient" />
-    <add name="MunicipalidadSanIsidroEntities_New" connectionString="metadata=res://*/AtencionCiudadano.csdl|res://*/AtencionCiudadano.ssdl|res://*/AtencionCiudadano.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CORCPU0905\SQLEXPRESS;initial catalog=MunicipalidadSanIsidro;persist security info=True;user id=fquispem;password=123456;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="MunicipalidadSanIsidroEntities_New" connectionString="metadata=res://*/AtencionCiudadano.csdl|res://*/AtencionCiudadano.ssdl|res://*/AtencionCiudadano.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CORCPU0905\SQLEXPRESS;initial catalog=MunicipalidadSanIsidro;persist security info=True;user id=fquispem;password=123456;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MuniIntegrado" connectionString="metadata=res://*/ObrasPublicas.csdl|res://*/ObrasPublicas.ssdl|res://*/ObrasPublicas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MUNI_INTEGRADO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
