--- a/Proyecto_Municipalidad_SanIsidro/Dominio.Core.Entities/Dominio.Core.Entities.csproj
+++ b/Proyecto_Municipalidad_SanIsidro/Dominio.Core.Entities/Dominio.Core.Entities.csproj
@@ -41,10 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Atencion.cs" />
+    <Compile Include="EstadoProyectoInversion.cs" />
     <Compile Include="Evento.cs" />
     <Compile Include="Parametro.cs" />
+    <Compile Include="ProyectoInversion.cs" />
     <Compile Include="Reclamo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Via.cs" />
     <Compile Include="ViewModel\ReclamoModelcs.cs" />
   </ItemGroup>
   <ItemGroup />
