--- a/Proyecto_Municipalidad_SanIsidro/Infraestructura.Data.SQL/Infraestructura.Data.SQL.csproj
+++ b/Proyecto_Municipalidad_SanIsidro/Infraestructura.Data.SQL/Infraestructura.Data.SQL.csproj
@@ -11,6 +11,21 @@
     <AssemblyName>Infraestructura.Data.SQL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -93,6 +108,11 @@
     <Compile Include="INFORMETERCERO.cs">
       <DependentUpon>AtencionCiudadano.tt</DependentUpon>
     </Compile>
+    <Compile Include="ObrasPublicas.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ObrasPublicas.edmx</DependentUpon>
+    </Compile>
     <Compile Include="PERSONA.cs">
       <DependentUpon>AtencionCiudadano.tt</DependentUpon>
     </Compile>
@@ -105,6 +125,7 @@
     <Compile Include="PROVINCIA.cs">
       <DependentUpon>AtencionCiudadano.tt</DependentUpon>
     </Compile>
+    <Compile Include="ProyectoInversion_DAL.cs" />
     <Compile Include="QUEJARECLAMO.cs">
       <DependentUpon>AtencionCiudadano.tt</DependentUpon>
     </Compile>
@@ -135,6 +156,7 @@
     <Compile Include="TIPODOCUMENTOIDENTIDAD.cs">
       <DependentUpon>AtencionCiudadano.tt</DependentUpon>
     </Compile>
+    <Compile Include="Via_DAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dominio.Core.Entities\Dominio.Core.Entities.csproj">
@@ -161,10 +183,40 @@
       <DependentUpon>AtencionCiudadano.edmx</DependentUpon>
       <LastGenOutput>AtencionCiudadano.cs</LastGenOutput>
     </None>
+    <EntityDeploy Include="ObrasPublicas.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ObrasPublicas.Designer.cs</LastGenOutput>
+    </EntityDeploy>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="aspnet-GAC-20150601210424.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="aspnet-GAC-20150601210424_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>aspnet-GAC-20150601210424.mdf</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
