--- a/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/Infraestructura.Data.SQL/App.Config
+++ b/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/Infraestructura.Data.SQL/App.Config
@@ -7,6 +7,7 @@
   <connectionStrings>
     <add name="MUNI_INTEGRADOEntities" connectionString="metadata=res://*/ObrasPublicas.csdl|res://*/ObrasPublicas.ssdl|res://*/ObrasPublicas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MUNI_INTEGRADO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="MuniIntegrado" connectionString="metadata=res://*/ObrasPublicas.csdl|res://*/ObrasPublicas.ssdl|res://*/ObrasPublicas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MUNI_INTEGRADO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MUNI_INTEGRADOEntities1" connectionString="metadata=res://*/MuniIntegrado.csdl|res://*/MuniIntegrado.ssdl|res://*/MuniIntegrado.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MUNI_INTEGRADO;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
