--- a/Proyecto_Municipalidad_SanIsidro/packages/repositories.config
+++ b/Proyecto_Municipalidad_SanIsidro/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Dominio.Core.Entities\packages.config" />
   <repository path="..\GAC\packages.config" />
   <repository path="..\Infraestructura.Data.SQL\packages.config" />
 </repositories>
